--- a/page04.html
+++ b/page04.html
@@ -5,30 +5,121 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./asset/nirvana.png" rel="icon">
 <style>
-/* Your existing styles remain unchanged */
+
+body, html{
+  margin:0;
+  padding: 0;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: krungthep;
+}
+
+.container {
+  position: relative;
+  width: 400px;
+  max-width: 300px;
+}
+
+.background-image {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.overlay-video {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Center the video */
+  width: 45%;
+  height: auto;
+  object-fit: cover;
+  opacity: 0.7;
+}
+
+.button-container {
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 10px;
+}
+
+.button {
+  padding: 10px 20px;
+  font-size: 16px;
+  font-family: krungthep;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  color: white;
+  background-color: black;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #666;
+}
+
+.button:hover { background-color: #00A19A; }
+
+.button:active {
+  background-color: skyblue;
+  box-shadow: 0 5px #666;
+}
+
+/* Panel Styling */
+.panel {
+  position: fixed;
+  right: -100%;
+  top: 0;
+  width: 300px;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: white;
+  padding: 20px;
+  transition: right 0.3s ease;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
+  z-index: 2;
+}
+
+.panel.active {
+  right: 0; /* Slide the panel in */
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 24px;
+  cursor: pointer;
+  color: white;
+}
+
 </style>
 </head>
 <body>
 
+
 <div class="container">
   <img src="./asset/meditation-03.png" alt="Background Image" class="background-image">
-  <video class="overlay-video" controls>
-    <source src="./waterfall-1.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
+<video class="overlay-video" controls>
+<source src="./waterfall-1.mp4" type="video/mp4">
+Your browser does not support the video tag.  </video>
 
-  <div class="button-container">
+<div class="button-container">
     <a href="./page01-1.html"><button class="button">Offering</button></a>
     <button class="button" onclick="openPanel()">Learn More</button>
   </div>
-
-  <!-- Sliding Panel -->
-  <div class="panel" id="infoPanel">
-    <span class="close-btn" onclick="closePanel()">&times;</span>
-    <h2>More Information</h2>
-    <p> All fruiting Karma arises from causes and conditions, and the nature of fruiting karma is unobtainable. </p>
-    <p> If it is not available, it is empty. Therefore, all the Buddha’s teachings are ultimately empty. There is no permanence, no immutability. </p>
-  </div>
+<!-- Sliding Panel -->
+<div class="panel" id="infoPanel">
+  <span class="close-btn" onclick="closePanel()">&times;</span>
+  <h2>More Information</h2>
+  <p> All fruiting Karma arises from causes and conditions, and the nature of fruiting karma is unobtainable. </p>
+  <p> If it is not available, it is empty. Therefore, all the Buddha’s teachings are ultimately empty. There is no permanence, no immutability. </p>
+</div>
 </div>
 
 <!-- Audio Element -->
@@ -36,13 +127,13 @@
   <source src="./audio/form.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
-
+  
 <script>
-// Updated JavaScript
 function openPanel() {
   document.getElementById("infoPanel").classList.add("active");
-  
-  // Play the audio
+}
+
+ // Play the audio
   const audio = document.getElementById("learnMoreAudio");
   audio.play();
 }
