--- a/page04.html
+++ b/page04.html
@@ -17,8 +17,8 @@ body, html {
 
 .container {
   position: relative;
-  width: 400px; /* Fixed missing semicolon */
-  max-width: 300px;
+  width: 100%; 
+  height: auto;  
 }
 
 .background-image {
