--- a/page05.html
+++ b/page05.html
@@ -162,6 +162,11 @@
   <p>Since they are born from the combination of many conditions, they are insubstantial and their nature is inherently empty.</p>
 </div>
 
+<audio id="learnMoreAudio">
+  <source src="./audio/feeling.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+</audio>
+
 <script>
 function openPanel() {
   document.getElementById("infoPanel").classList.add("active");
