--- a/index.html
+++ b/index.html
@@ -150,5 +150,10 @@ audio {
     window.location.href = './page01.html';
   }
 </script>
+
+<audio controls autoplay>
+  <source src="./audio/temple.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+</audio>
 </body>
 </html>
