--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ audio {
 </div>
 </div>
 
-<audio controls autoplay>
+<audio controls>
   <source src="./audio/temple.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
