--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ audio {
 </div>
 
 <audio controls>
-  <source src="./audio/temple.mp3" type="audio/mp3">
+  <source src="./audio/temple-1.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
 
