--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ audio {
 </div>
 </div>
 
-<audio controls>
+<audio controls autoplay>
   <source src="./audio/temple-1.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
