--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <button class="button button2" onclick="window.location.href='./page00.html'"type="about">ABOUT</button>
   </div>
   <div class="popup" id="popup">
-    <img src="./asset/popup-1.png" alt="Popup Icon" class="popup-image">
+    <img src="./asset/nirvana.png" alt="Popup Icon" class="popup-image">
     <h2>Welcome</h2>
     <p> To the virtual Taiwanese temple.</p>
     <p> Please keep a calm and pious heart before entering!</p>
