--- a/index.html
+++ b/index.html
@@ -5,111 +5,96 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./asset/nirvana.png" rel="icon">
 <style>
-
+/* Styles unchanged */
 .container {
-  text-align: center; /* Centers the image and buttons horizontally */
-  margin-top: 50px; /* Adjusts the top margin to bring content down a bit */
+  text-align: center;
+  margin-top: 50px;
 }
-
 .container img {
   width: 100%;
   height: 80%;
 }
-
 .button-container {
   display: flex;
-  justify-content: center; /* Centers the buttons horizontally */
-  gap: 20px;  
-  margin-top: 20px; /* Adds some space between the image and buttons */
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
 }
-
 .button-container button {
   padding: 16px 32px;
   font-size: 16px;
   font-family: krungthep;
   cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-  outline: none;
   color: #fff;
   background-color: black;
   border: none;
   border-radius: 15px;
   box-shadow: 0 9px #999;
 }
-
 .button:hover {
   background-color: #E6ACA0;
 }
-
 .button1:active, .button2:active {
   background-color: black;
   transform: translateY(4px);
 }
-
 .popup {
-    width: 400px;
-    background: #fff;
-    border-radius: 6px;
-    position: absolute;
-    top: 0%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0.1);
-    text-align: center;
-    padding: 0 30px 30px;
-    visibility: hidden;
-    transition: transform 0.5s, top 0.5s;
+  width: 400px;
+  background: #fff;
+  border-radius: 6px;
+  position: absolute;
+  top: 0%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.1);
+  text-align: center;
+  padding: 0 30px 30px;
+  visibility: hidden;
+  transition: transform 0.5s, top 0.5s;
 }
-
-.popup-image{
+.popup-image {
   width: 100%;
   height: auto;
-  max-width:150px;
+  max-width: 150px;
 }
-
 .openPopup {
-    top: 50%;
-    visibility: visible;
-    transform: translate(-50%, -50%) scale(1);
-} 
-
-.popup h2{
+  top: 50%;
+  visibility: visible;
+  transform: translate(-50%, -50%) scale(1);
+}
+.popup h2 {
   font-size: 30px;
   font-weight: 600;
-  margin: 10px 0 px;
+  margin: 10px 0px;
   font-family: krungthep;
 }
-
-.popup p{
- font-family: krungthep;
+.popup p {
+  font-family: krungthep;
 }
-  
-
 .pushable {
-    background: hsl(0, 0%, 20%);
-    border-radius: 12px;
-    margin-top: 40px;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-    outline-offset: 4px;
+  background: hsl(0, 0%, 20%);
+  border-radius: 12px;
+  margin-top: 40px;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  outline-offset: 4px;
 }
-
 .front {
-    display: block;
-    padding: 12px 42px;
-    border-radius: 12px;
-    font-size: 1.25rem;
-    background: hsl(0  0% 40%);
-    color: white;
-    transform: translateY(-6px);
-    font-family: krungthep;
+  display: block;
+  padding: 12px 42px;
+  border-radius: 12px;
+  font-size: 1.25rem;
+  background: hsl(0 0% 40%);
+  color: white;
+  transform: translateY(-6px);
+  font-family: krungthep;
 }
-
 .pushable:active .front {
-    transform: translateY(-2px);
+  transform: translateY(-2px);
 }
-
+audio {
+  display: none; /* Hide audio player */
+}
 </style>
 </head>
 <body>
@@ -126,30 +111,36 @@
     <h2>Welcome</h2>
     <p> To the virtual Taiwanese temple.</p>
     <p> Please keep a calm and pious heart before entering!</p>
-    <p></p>
     <button class="pushable" onclick="closePopup()">
       <span class="front">
           I am ready!
       </span>
     </button>
-</div>
+  </div>
 </div>
 
-<audio controls autoplay>
+<audio id="templeAudio">
   <source src="./audio/temple-1.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
 
 <script>
   let popup = document.getElementById("popup");
+  let audio = document.getElementById("templeAudio");
 
   function openPopup() {
     popup.classList.add("openPopup");
+    // Play the audio
+    if (audio) {
+      audio.play();
+    }
   }
+
   function closePopup() {
     popup.classList.remove("openPopup");
     window.location.href = './page01.html';
   }
 </script>
+
 </body>
 </html>
