--- a/page04.html
+++ b/page04.html
@@ -96,6 +96,14 @@ body, html {
   cursor: pointer;
   color: white;
 }
+
+.panel-image {
+  width: 60%; /* Full width of the panel */
+  height: auto; /* Maintain aspect ratio */
+  margin-bottom: 20px; /* Space between the image and the text */
+  border-radius: 10px; /* Optional: Rounded corners */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: Add some depth */
+}
 </style>
 </head>
 <body>
@@ -117,6 +125,7 @@ body, html {
     <h2>More Information</h2>
     <p> All fruiting Karma arises from causes and conditions, and the nature of fruiting karma is unobtainable. </p>
     <p> If it is not available, it is empty. Therefore, all the Buddha’s teachings are ultimately empty. There is no permanence, no immutability. </p>
+    <img src="./asset/form-2.png" alt="Karma Illustration" class="panel-image">
   </div>
 </div>
 
