--- a/page05.html
+++ b/page05.html
@@ -129,6 +129,13 @@
   color: white;
 }
 
+.panel-image {
+  width: 100%; /* Full width of the panel */
+  height: auto; /* Maintain aspect ratio */
+  margin-bottom: 10px; /* Space between the image and the text */
+  border-radius: 10px; /* Optional: Rounded corners */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: Add some depth */
+}
 
 </style>
 </head>
