--- a/page05.html
+++ b/page05.html
@@ -167,6 +167,7 @@
   <h2>More Information</h2>
   <p>Various organizations are formed based on many conditions and cannot survive alone.</p>
   <p>Since they are born from the combination of many conditions, they are insubstantial and their nature is inherently empty.</p>
+  <img src="./asset/feeling-1.png" alt="Feeling Illustration" class="panel-image">
 </div>
 
 <audio id="learnMoreAudio">
