--- a/page01.html
+++ b/page01.html
@@ -92,7 +92,7 @@ audio {
     <h2>I am Guan Yin</h2>
     <p>While deeply immersed in Prajna Paramita, clearly perceived the empty nature of the five skandhas, And transcended all suffering.</p>
     <p>If you need my help, you must have enough blessings, good intentional action, and always be kind. Practice asceticism and you will attain the goal.</p>
-    <p>Tips: Start by offering fruit to Guan Yin.</p>
+    <p>Unlock the tasks by offering fruits to Guan Yin.</p>
   </div>
 </div>
 
@@ -103,16 +103,16 @@ audio {
       <img src="./asset/fruit01.png" alt="pineapple"></a>
   </div>
   <div class="column">
-      <img src="./asset/fruit02.png" alt="apple"></a>
+      <img src="./asset/shadow02.png" alt="apple"></a>
   </div>
   <div class="column">
-      <img src="./asset/fruit03.png" alt="pear"></a>
+      <img src="./asset/shadow03.png" alt="pear"></a>
   </div>
   <div class="column">
-      <img src="./asset/fruit04.png" alt="orange"></a>
+      <img src="./asset/shadow04.png" alt="orange"></a>
   </div>
   <div class="column">
-      <img src="./asset/fruit05.png" alt="papaya"></a>
+      <img src="./asset/shadow05.png" alt="papaya"></a>
   </div>
 </div>
 <audio controls autoplay>
