--- a/page01-1.html
+++ b/page01-1.html
@@ -100,13 +100,13 @@
       <img src="./asset/fruit02.png" alt="apple"></a>
   </div>
   <div class="column">
-      <img src="./asset/fruit03.png" alt="pear"></a>
+      <img src="./asset/shadow03.png" alt="pear"></a>
   </div>
   <div class="column">
-      <img src="./asset/fruit04.png" alt="orange"></a>
+      <img src="./asset/shadow04.png" alt="orange"></a>
   </div>
   <div class="column">
-      <img src="./asset/fruit05.png" alt="papaya"></a>
+      <img src="./asset/shadow05.png" alt="papaya"></a>
   </div>
 </div>
 
