--- a/page04.html
+++ b/page04.html
@@ -115,7 +115,7 @@ body, html {
   </video>
 
   <div class="button-container">
-    <a href="./page01-1.html"><button class="button">Offering</button></a>
+    <a href="./page01-1.html"><button class="button">Offering 🍍</button></a>
     <button class="button" onclick="openPanel()">Learn More</button>
   </div>
 
