--- a/page05.html
+++ b/page05.html
@@ -156,7 +156,7 @@
 </video>
 
 <div class="button-container">
-    <a href="./page01-2.html"><button class="button">Offering</button></a>
+    <a href="./page01-2.html"><button class="button">Offer 🍎</button></a>
     <button class="button" onclick="openPanel()">Learn More</button>
 </div>
   </div>
