--- a/page07.html
+++ b/page07.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -164,7 +165,7 @@ audio {
 
 <br>
 <h2>Calm down, you shall know my words.</h2>
-<p> If you spin 3 poes in YES (one in red, and another in grey), we can continue to the next section. <br>If not, today is not a good time to have a conversation. Press "Offering" instead.</p>
+<p> If you spin 3 poes in YES (one in red, and another in grey), we can continue to the next section. <br>If not, today is not a good time to have a conversation. Press "Offer 🍐" instead.</p>
 
 <div class="poe">
   <div class="set" id="set1">
