--- a/page01-3.html
+++ b/page01-3.html
@@ -89,7 +89,7 @@
     <h2>I am Guan Yin</h2>
     <p>While deeply immersed in Prajna Paramita, clearly perceived the empty nature of the five skandhas, And transcended all suffering.</p>
     <p>If you need my help, you must have enough blessings, good intentional action, and always be kind. Practice asceticism and you will attain the goal.</p>
-    <p>Tips: Start by offering fruit to Guan Yin.</p>
+    <p>Unlock the tasks by offering fruits to Guan Yin.</p>
   </div>
 </div>
 
@@ -100,7 +100,7 @@
       <img src="./asset/fruit04.png" alt="orange"></a>
   </div>
   <div class="column">
-      <img src="./asset/fruit05.png" alt="papaya"></a>
+      <img src="./asset/shadow05.png" alt="papaya"></a>
   </div>
 </div>
 </body>
