--- a/page08.html
+++ b/page08.html
@@ -196,6 +196,6 @@ body, html {
         }
     </script>
     <a href="./page01-4.html">
-    <button class="button">Offering</button>
+    <button class="button">Offer 🍊</button>
 </body>
 </html>
