--- a/page07.html
+++ b/page07.html
@@ -188,7 +188,7 @@ audio {
 </div>
 
 <button class="button" onclick="spin()">Spin</button>
-<a href="./page01-3.html">Offering</a>
+<a href="./page01-3.html">Offer 🍐</a>
 
 <script>
   // Define the audio object
