--- a/page09.html
+++ b/page09.html
@@ -169,7 +169,7 @@ audio {
 
   <br>
   <p>May the merits of our deeds reach every part of the world!</p>
-  <button class="button exit" onclick="openPopup()">Offering</button>
+  <button class="button exit" onclick="openPopup()">Offer 🥭</button>
 </div>
 
 <!-- Popup -->
