--- a/index.html
+++ b/index.html
@@ -101,22 +101,11 @@ audio {
 <body>
 
 <div class="container">
-  <img src="asset/Temple 01-1.png" alt="Temple 01">
+  <img src="asset/intro - temple-1.png" alt="Temple 00">
   
   <div class="button-container">
-    <button class="button button1" onclick="openPopup()"> ENTER </button>
-    <button class="button button2" onclick="window.location.href='./page00.html'"type="about">ABOUT</button>
-  </div>
-  <div class="popup" id="popup">
-    <img src="./asset/nirvana.png" alt="Popup Icon" class="popup-image">
-    <h2>Welcome</h2>
-    <p> To the virtual Taiwanese temple.</p>
-    <p> Please keep a calm and pious heart before entering!</p>
-    <button class="pushable" onclick="closePopup()">
-      <span class="front">
-          I am ready!
-      </span>
-    </button>
+    <button class="button button1" onclick="openPopup()"> Yes </button>
+    <button class="button button2" onclick="window.location.href='./entrance.html'"type="about">No</button>
   </div>
 </div>
 
