--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ audio {
   </div>
 </div>
 
-<audio id="templeAudio">
+<audio id="templeAudio" autoplay>
   <source src="./audio/temple-1.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
