--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div>
 
 <audio id="templeAudio" autoplay>
-  <source src="./audio/temple-1.mp3" type="audio/mp3">
+  <source src="./audio/amitabah.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
 
