--- a/intro.html
+++ b/intro.html
@@ -1,4 +1,7 @@
 <html> 
+<style>
+
+</style>
 <body> 
 
 <video width="400" controls>
@@ -6,6 +9,10 @@
   <source src="mov_bbb.ogg" type="video/ogg">
   Your browser does not support HTML video.
 </video>
+
+<div class="fixed-bg"></div>
+<a href="./index.html">
+<button class="button">Back</button>
 
 </body> 
 </html>
