--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   <img src="asset/intro - temple-1.png" alt="Temple 00">
   
   <div class="button-container">
-    <button class="button button1" onclick="openPopup()"> Yes </button>
-    <button class="button button2" onclick="window.location.href='./entrance.html'"type="about">No</button>
+    <button class="button button1" onclick="window.location.href='./intro.html'"type="Yes">Yes</button>
+    <button class="button button2" onclick="window.location.href='./entrance.html'"type="No">No</button>
   </div>
 </div>
 
