--- a/intro.html
+++ b/intro.html
@@ -30,7 +30,7 @@
 <body> 
 
 <video width="400" controls>
-  <source src="intro.mp4" type="video/mp4">
+  <source src="./intro.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
 
