--- a/intro.html
+++ b/intro.html
@@ -1,42 +1,69 @@
-<html> 
-<style>
-.button {
-  position: absolute;
-        left: 50%;
-        bottom: 15px; /* Adjust this value as needed */
-        transform: translateX(-50%);
-        display: inline-block;
-        padding: 16px 32px;
-        font-size: 16px;
-        cursor: pointer;
-        text-align: center;
-        text-decoration: none;
-        font-weight: bold;
-        outline: none;
-        color: white;
-        background-color: black;
-        border: none;
-        border-radius: 15px;
-        box-shadow: 0 9px #666;
-}
-        .button:hover {background-color: #AE2C2B;}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Centered Video</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f4f4f4;
+      overflow: hidden;
+    }
 
-        .button:active {
-        background-color: skyblue;
-        box-shadow: 0 5px #666;
-        transform: translateX(-50%);
-        }
-</style>
-<body> 
+    video {
+      width: 1080px;
+      height: 1080px;
+      max-width: 100%;
+      max-height: 100%;
+    }
 
-<video width="1080" controls>
+    .button {
+      position: absolute;
+      left: 50%;
+      bottom: 30px; /* Adjust this value as needed */
+      transform: translateX(-50%);
+      display: inline-block;
+      padding: 16px 32px;
+      font-size: 16px;
+      cursor: pointer;
+      text-align: center;
+      text-decoration: none;
+      font-weight: bold;
+      outline: none;
+      color: white;
+      background-color: black;
+      border: none;
+      border-radius: 15px;
+      box-shadow: 0 9px #666;
+    }
+
+    .button:hover {
+      background-color: #AE2C2B;
+    }
+
+    .button:active {
+      background-color: skyblue;
+      box-shadow: 0 5px #666;
+      transform: translateX(-50%);
+    }
+  </style>
+</head>
+<body>
+
+<video autoplay muted loop>
   <source src="./intro.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
 
-<div class="fixed-bg"></div>
 <a href="./entrance.html">
-<button class="button">OK!</button>
+  <button class="button">OK!</button>
+</a>
 
-</body> 
+</body>
 </html>
