--- a/intro.html
+++ b/intro.html
@@ -17,10 +17,11 @@
     }
 
     video {
-      width: 1080px;
-      height: 1080px;
-      max-width: 100%;
-      max-height: 100%;
+      width: 100%;
+      height: auto;
+      max-width: 1080px;
+      max-height: 1080px;
+      border-radius: 10px; /
     }
 
     .button {
