--- a/intro.html
+++ b/intro.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Centered Video</title>
+  <title>Welcome!</title>
   <style>
     body {
       margin: 0;
@@ -45,7 +45,7 @@
     }
 
     .button:hover {
-      background-color: #AE2C2B;
+      background-color: #E6ACA0;
     }
 
     .button:active {
@@ -63,7 +63,7 @@
 </video>
 
 <a href="./entrance.html">
-  <button class="button">OK!</button>
+  <button class="button">Thanks!</button>
 </a>
 
 </body>
