--- a/intro.html
+++ b/intro.html
@@ -57,7 +57,7 @@
 </head>
 <body>
 
-<video autoplay muted loop>
+<video autoplay>
   <source src="./intro.mp4" type="video/mp4">
   Your browser does not support HTML video.
 </video>
