--- a/intro.html
+++ b/intro.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="./asset/nirvana.png" rel="icon">
   <title>Welcome to the intro!</title>
   <style>
     body {
@@ -12,7 +13,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background-color: #f4f4f4;
+      background-color: black;
       overflow: hidden;
     }
 
@@ -56,7 +57,6 @@
   </style>
 </head>
 <body>
-
 <video autoplay>
   <source src="./intro.mp4" type="video/mp4">
   Your browser does not support HTML video.
