--- a/intro.html
+++ b/intro.html
@@ -39,7 +39,7 @@
       font-weight: bold;
       outline: none;
       color: white;
-      background-color: blue;
+      background-color: skyblue;
       border: none;
       border-radius: 15px;
       box-shadow: 0 9px #999;
