--- a/page01.html
+++ b/page01.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./asset/nirvana.png" rel="icon">
+<title>Guan Yin</title>
 <style>
 /* Reset box-sizing */
 * {
