--- a/page04.html
+++ b/page04.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./asset/nirvana.png" rel="icon">
+<title>Form</title>
 <style>
 body, html {
   margin: 0;
