--- a/page06.html
+++ b/page06.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./asset/nirvana.png" rel="icon">
+<title>Guan Gong</title>
 <style> 
 .fixed-bg {
   background-image: url('./asset/Temple 04.png');
