--- a/page07.html
+++ b/page07.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./asset/nirvana.png" rel="icon">
+<title>Conception</title>
 <style>
   body {
     text-align: center;
