--- a/page08.html
+++ b/page08.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./asset/nirvana.png" rel="icon">
-
+<title>Volition</title>
 <style>
 body, html {
             margin: 0;
