--- a/page09.html
+++ b/page09.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./asset/nirvana.png" rel="icon">
+<title>Consciousness</title>
 <style>
 body {
     margin: 25px;
