--- a/intro.html
+++ b/intro.html
@@ -43,6 +43,7 @@
       border: none;
       border-radius: 15px;
       box-shadow: 0 9px #999;
+      font-family: krungthep;
     }
 
     .button:hover {
