--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <style>
 /* Styles unchanged */
 .container {
-  text-align: center;
-  margin-top: 50px;
+    text-align: center;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .container img {
   width: 100%;
