--- a/page04.html
+++ b/page04.html
@@ -61,6 +61,7 @@ body, html {
   border: none;
   border-radius: 15px;
   box-shadow: 0 9px #666;
+  margin-bottom:60%;
 }
 
 .button:hover { background-color: #00A19A; }
